infrastructure.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "",
    "Metadata": {

    },
    "Parameters": {
      "LatestAmiId": {
       "Description": "Region specific image from the Parameter Store",
       "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
       "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
      },

      "InstanceType": {
      "Description": "Amazon EC2 instance type for the instances",
      "Type": "String",
      "AllowedValues": [
      "t2.micro",
      "t2.small",
      "t2.medium"
      ],
      "Default": "t2.micro"
      }
  },
    "Mappings": {

    },
    "Conditions": {

    },
    "Resources": {
      "RAY": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": "10.0.0.0/16",
          "EnableDnsHostnames" : "true",
          "EnableDnsSupport" : "true",
          "Tags": [{ "Key": "Name", "Value":  "RAY" }]
        }
      },
      "RAYPUB": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "us-east-1a",
          "VpcId": { "Ref": "RAY" },
          "CidrBlock": "10.0.10.0/24",
          "Tags": [{ "Key": "Name", "Value":  "RAYPUB" }]
        }
      },
      "RAYPVT": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "us-east-1b",
          "VpcId": { "Ref": "RAY" },
          "CidrBlock": "10.0.20.0/24",
          "Tags": [{ "Key": "Name", "Value":  "RAYPVT" }]
        }
      },
      "PublicRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": { "Ref": "RAY" },
          "Tags": [{ "Key": "Name", "Value":  "PublicRouteTable" }]
        }
      },
      "PrivateRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": { "Ref": "RAY" },
          "Tags": [{ "Key": "Name", "Value":  "PrivateRouteTable" }]
        }
      },
      "RAYINTGATEWAY": {
        "Type": "AWS::EC2::InternetGateway",
        "Properties": {
          "Tags": [{ "Key": "Name", "Value":  "RAYINTGATEWAY" }]
        }
      },
      "AttachGateway": {
        "Type": "AWS::EC2::VPCGatewayAttachment",
        "Properties": {
          "VpcId": { "Ref": "RAY" },
          "InternetGatewayId": { "Ref": "RAYINTGATEWAY" }
        }
      },
      "Route1" : {
        "Type" : "AWS::EC2::Route",
        "DependsOn" : "AttachGateway",
        "Properties" : {
          "RouteTableId" : { "Ref" : "PublicRouteTable" },
          "DestinationCidrBlock" : "0.0.0.0/0",
          "GatewayId" : { "Ref" : "RAYINTGATEWAY" }
        }
      },
      "NatGateway" : {
       "Type" : "AWS::EC2::NatGateway",
       "Properties" : {
       "AllocationId" : { "Fn::GetAtt" : ["EIP", "AllocationId"]},
       "SubnetId" : { "Ref" : "RAYPUB"},
       "Tags" : [{ "Key": "Name", "Value":  "NatGateway" }]
     }
},
     "EIP" : {

      "Type" : "AWS::EC2::EIP",
      "Properties" : {
      "Domain" : "vpc"
   }
},
      "Route" : {
        "Type" : "AWS::EC2::Route",
        "Properties" : {
        "RouteTableId" : { "Ref" : "PrivateRouteTable" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NatGateway" }
   }
},

    "PublicRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "RAYPUB" },
        "RouteTableId": { "Fn::GetAtt" : [ "PublicRouteTable", "RouteTableId" ]}
      }
    },

    "PrivateRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "RAYPVT" },
        "RouteTableId": { "Fn::GetAtt" : [ "PrivateRouteTable", "RouteTableId" ]}
      }
    },

          "SG1" : {
          "Type" : "AWS::EC2::SecurityGroup",
          "Properties" : {
            "GroupDescription" : "Allow http to client host",
            "SecurityGroupIngress" : [{
              "IpProtocol": "tcp",
              "FromPort": "80",
              "ToPort": "80",
              "CidrIp": "0.0.0.0/0"
            }],
            "SecurityGroupEgress" : [{
              "IpProtocol": "tcp",
              "FromPort": "80",
              "ToPort": "80",
              "CidrIp": "0.0.0.0/0"
              }],
            "VpcId" : { "Ref": "RAY" },
            "Tags" :  [{ "Key": "Name", "Value":  "SG1" }]
          }
        },

    "ApplicationLoadBalancer" : {
        "Type" : "AWS::ElasticLoadBalancingV2::LoadBalancer",
        "Properties" : {
        "Scheme" : "internet-facing",
        "SecurityGroups" : [ { "Ref": "SG1" }],
        "Subnets" : [ { "Ref": "RAYPUB" }, { "Ref": "RAYPVT" } ],
        "Tags" : [ { "Key": "Name", "Value":  "ApplicationLoadBalancer" } ],
        "Type" : "application"
    }
},

"ALBListener" : {
  "Type" : "AWS::ElasticLoadBalancingV2::Listener",
  "Properties" : {
    "DefaultActions" : [{
      "Type" : "forward",
      "TargetGroupArn" : { "Ref" : "ALBTargetGroup" }
    }],
    "LoadBalancerArn" : { "Ref" : "ApplicationLoadBalancer" },
    "Port" : "80",
    "Protocol" : "HTTP"
  }
},

       "WebServerASG" : {
            "Type" : "AWS::AutoScaling::AutoScalingGroup",
            "Properties" : {

                "LaunchConfigurationName" : { "Ref": "WebServerLC" },
                "MaxSize" : "3",
                "MinSize" : "2",
                "VPCZoneIdentifier" :  [ { "Ref": "RAYPUB" }, { "Ref": "RAYPVT" } ],
                "TargetGroupARNs" : [ { "Ref" : "ALBTargetGroup" } ],
                "Tags" : [ {"Key" : "Name",
                            "Value" : "-",
                            "PropagateAtLaunch" : "True"}
                        ]
            }
        },

        "WebServerLC": {
            "Type" : "AWS::AutoScaling::LaunchConfiguration",
            "Properties" : {
                "ImageId" : { "Ref": "LatestAmiId" },
                "InstanceType" : { "Ref": "InstanceType" },
                "SecurityGroups" :  [{ "Ref": "SG1" }],
                "UserData" : { "Fn::Base64": {   "Fn::Join": ["", [
                  "#!/bin/bash -ex",
                  "yum update -y",
                  "yum install httpd -y",
                  "cd /var/www/html",
                  "echo \"Hello World\" > index.html",
                  "service httpd start",
                  "chkconfig httpd on"
                ]

            ]
        }
    }
    }
  },
        "ALBTargetGroup" : {
            "Type" : "AWS::ElasticLoadBalancingV2::TargetGroup",
            "Properties" : {
            "HealthCheckIntervalSeconds" : 30,
            "HealthCheckTimeoutSeconds" : 5,
            "HealthyThresholdCount" : 3,
            "Port" : 80,
            "Protocol" : "HTTP",
            "UnhealthyThresholdCount" : 5,
            "VpcId" : {"Ref" : "RAY"}
              }
            },

                "WebServerScaleUpPolicy" : {
                  "Type" : "AWS::AutoScaling::ScalingPolicy",
                  "Properties" : {
                    "AdjustmentType" : "ChangeInCapacity",
                    "AutoScalingGroupName" : { "Ref" : "WebServerASG" },
                    "Cooldown" : "60",
                    "ScalingAdjustment" : "1"
                  }
                },
                "WebServerScaleDownPolicy" : {
                  "Type" : "AWS::AutoScaling::ScalingPolicy",
                  "Properties" : {
                    "AdjustmentType" : "ChangeInCapacity",
                    "AutoScalingGroupName" : { "Ref" : "WebServerASG" },
                    "Cooldown" : "60",
                    "ScalingAdjustment" : "-1"
                  }
                },

                    "CPUAlarmHigh": {
                     "Type": "AWS::CloudWatch::Alarm",
                     "Properties": {
                        "AlarmDescription": "Scale-up if CPU > 80% for 10 minutes",
                        "MetricName": "CPUUtilization",
                        "Namespace": "AWS/EC2",
                        "Statistic": "Average",
                        "Period": "300",
                        "EvaluationPeriods": "2",
                        "Threshold": "80",
                        "AlarmActions": [ { "Ref": "WebServerScaleUpPolicy" } ],
                        "Dimensions": [
                          {
                            "Name": "AutoScalingGroupName",
                            "Value": { "Ref": "WebServerASG" }
                          }
                        ],
                        "ComparisonOperator": "GreaterThanThreshold"
                      }
                    },
                    "CPUAlarmLow": {
                     "Type": "AWS::CloudWatch::Alarm",
                     "Properties": {
                        "AlarmDescription": "Scale-down if CPU < 75% for 10 minutes",
                        "MetricName": "CPUUtilization",
                        "Namespace": "AWS/EC2",
                        "Statistic": "Average",
                        "Period": "300",
                        "EvaluationPeriods": "2",
                        "Threshold": "75",
                        "AlarmActions": [ { "Ref": "WebServerScaleDownPolicy" } ],
                        "Dimensions": [
                          {
                            "Name": "AutoScalingGroupName",
                            "Value": { "Ref": "WebServerASG" }
                          }
                        ],
                        "ComparisonOperator": "LessThanThreshold"
                      }
                    }



        },
    "Outputs": {
      "URL": {
        "Description": "Website URL",
        "Value": {"Fn::Join" : ["",[ "http://", { "Fn::GetAtt" : [ "ApplicationLoadBalancer", "DNSName" ]} ] ]}
      }

    }
}
